--- a/index.html
+++ b/index.html
@@ -86,7 +86,12 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>
+            Administrador de Redes e Tecnologia dedicado com 27 anos de experiência. Implantei o Sistema Operacioal Linux na empresa onde trabalho,ajustando tecnologias,
+            assim reduzindo custos de implantacao de sistemas operacionais proprietarios e instalando a estrutura de cabeamento estruturado, bem como sua documentação. 
+            Graduado em Redes de Computaores e Bacharel em Sistemas da Informação, sigo em aprender novas tendencias. Participante como colaborador do evento FLISOL 
+            em sua terceira edicao e como coordenador do SOFTWARE FREEDOM DAY.
+          </p>
         </div>
 
         <div class="row">
