--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <a href="# target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="# target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="# target="_blank" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="https://br.linkedin.com/in/charlesalvessantana target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://br.linkedin.com/in/charlesalvessantana" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
